Fix alignment in facts/figures: two prebuilt section

--- a/resources/gato-component-patterns/css/callout.scss
+++ b/resources/gato-component-patterns/css/callout.scss
@@ -9,10 +9,13 @@
       font-weight: 700;
       font-size: 5rem;
       line-height: 5rem;
-      padding: 0.5rem 1rem;
+      padding: 0.5rem 0;
       margin-bottom: 2rem;
       text-transform: uppercase;
       display: inline-block;
+      &.background {
+        padding: 0.5rem 1rem;
+      }
     }
     .title {
       font-family: $halis;
